--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/ldw510/bandalo.git",
+  "homepage": ".",
   "name": "bandalo-site",
   "version": "0.1.0",
   "private": true,
